--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,5 @@
   Welcome to my homepage! 
 </h1>
 I'm Jade. 
-<p>Click <a href="{{ get_url(path='@/blog/_index.md') }}">here</a> to see my blog.</p>
+<p>Click <a href="{{ get_url(path='@/blog') }}">here</a> to see my blog.</p>
 {% endblock content %}
